...
        setupNavigation()
    }
    
    // MARK: Setup Navigation
    private func setupNavigation() {
        navigationController?.navigationBar.prefersLargeTitles = true
        title = "TV SHOWS"
        let rightButton = UIBarButtonItem(title: "Sort", style: .done, target: self, action: #selector(sortTvShows))
        rightButton.tintColor = .white
        navigationItem.rightBarButtonItem = rightButton
    }

    // MARK: Load Tv Shows
    func loadTvShows() {
...
